<resources>
    <string name="app_name">projektas</string>
    <string name="app_title">Welcome To the Real World</string>
    <string name="reg_title">Registration</string>

    <string name="login_username">Username</string>
    <string name="Email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_login_btn">Login</string>
    <string name="login_register_btn">Register</string>
</resources>