<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reg_title"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold" />




    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/login_username"
        android:autofillHints="username"
        android:backgroundTint="@color/colorText"
        android:textColor="#F00"
        android:textColorHint="@color/colorText"

        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        android:autofillHints="username"
        android:backgroundTint="@color/colorText"
        android:textColor="#F00"
        android:textColorHint="@color/colorText"

        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:autofillHints="password"
        android:textColor="#F00"
        android:backgroundTint="@color/colorText"
        android:textColorHint="@color/colorText"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp">


        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorText"
            android:text="@string/login_register_btn"
            android:layout_weight="1"
           />

    </LinearLayout>


</LinearLayout>


